# UE4SS-Build-Guide

./: .gitignore  .gitmodules  CMakeLists.txt  DumpConverter.md  README.md  folder_organization.cmake  gen.bat  gen_mvscrt_fix.bat  generate_mod.py  init_submodules.bat
Tools/: consolidator.py  dump_converter.py
